--- a/Dogtor/src/main/resources/mx/utel/poo/dogtor/views/mascota-view.fxml
+++ b/Dogtor/src/main/resources/mx/utel/poo/dogtor/views/mascota-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="380.0" prefWidth="494.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="mx.utel.poo.dogtor.MascotaView">
+<VBox alignment="CENTER" prefHeight="380.0" prefWidth="494.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="mx.utel.poo.dogtor.views.MascotaController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
