--- a/Dogtor/src/main/resources/mx/utel/poo/dogtor/vistas/mascota-view.fxml
+++ b/Dogtor/src/main/resources/mx/utel/poo/dogtor/vistas/mascota-view.fxml
@@ -30,9 +30,10 @@
             <DatePicker fx:id="cmpFecha" maxWidth="1.7976931348623157E308" />
             <VBox alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="200.0" prefWidth="100.0" spacing="8.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Button fx:id="btnEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminar" text="ELIMINAR" />
-                  <Button fx:id="btnGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardar" text="GUARDAR" />
-                  <Button fx:id="btnAgregar" defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregar" text="AGREGAR" />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#limpiar" text="LIMPIAR" />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminar" text="ELIMINAR" />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardar" text="GUARDAR" />
+                  <Button defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregar" text="AGREGAR" />
                </children>
             </VBox>
          </children>
